syntax = "proto3";

package pb;

option go_package = "user/pkg/grpc/pb";


//The User service definition.
service User {
 rpc GetUserById (GetUserByIdRequest) returns (GetUserByIdReply);
}
message GetUserByIdRequest {}
message GetUserByIdReply {}
